--- a/m4/demo1/1.2/Jenkinsfile
+++ b/m4/demo1/1.2/Jenkinsfile
@@ -15,7 +15,7 @@ pipeline {
         }   
         stage('Smoke Test') {
             steps {
-              sh 'docker run sixeyed/pi:psod-pipelines'
+              sh 'docker run AmarPotki/pi:psod-pipelines'
             }
         }
     }
